--- a/style.css
+++ b/style.css
@@ -90,11 +90,12 @@ label {
 label::before {
     content: "";
     position: absolute;
-    inset: 0;
-    border-radius: 7px;
+    top: -1px;
+    left: -1px;
+    right: -1px;
+    bottom: -1px;
+    border-radius: 10px;
     z-index: -1;
-    width: 100%;
-    height: 100%;
     background-color: white;
     transition-duration: 500ms;
     transition-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
