--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     align-items: center;
     padding: 2rem 1rem;
     font-family: "Montserrat", sans-serif;
+    background: linear-gradient(to top, #134e5e, #71b280);
 }
 
 body::before {
@@ -44,8 +45,8 @@ select {
     border: none;
     outline: none;
     border-radius: 10px;
-    color: white;
-    background-color: black;
+    color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(0, 0, 0, 0.8);
     margin: 1rem auto 2rem;
     padding: 0.5rem 1rem;
     font-size: 1rem;
@@ -57,7 +58,7 @@ select {
     width: 90%;
     display: flex;
     flex-direction: column;
-    border: 2px solid black;
+    border: 2px solid rgba(0, 0, 0, 0.8);
     border-radius: 10px;
     padding: 1rem;
 }
@@ -80,7 +81,7 @@ label {
     padding: 0.5rem;
     font-size: 1rem;
     margin: 0;
-    border: 2px solid black;
+    border: 2px solid rgba(0, 0, 0, 0.8);
     border-radius: 10px;
     cursor: pointer;
     position: relative;
@@ -96,7 +97,7 @@ label::before {
     bottom: -1px;
     border-radius: 10px;
     z-index: -1;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.6);
     transition-duration: 500ms;
     transition-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
 }
@@ -113,8 +114,8 @@ button {
     border: none;
     outline: none;
     padding: 0.5rem 1rem;
-    color: white;
-    background-color: black;
+    color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(0, 0, 0, 0.8);
     cursor: pointer;
     border-radius: 10px;
     margin: 1.5rem auto 0;
@@ -130,7 +131,7 @@ button:active {
 }
 
 .incorrect {
-    background-color: red;
+    background-color: rgba(255, 0, 0, 0.7);
     color: white;
     transition-duration: 1000ms;
     transition-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
